@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 0.5.3 ===
+* Added system::get_temporary_dir() functions.
 
 === 0.5.2 ===
 * Added i18n support.
